# integrations-sdk

./: .gitignore  AGENTS.md  README.md  README_PYPI.md  RELEASENOTES.md  RELEASING.md  pyproject.toml
.github/workflows/: tests.yml
docs/: autohive_integrations_sdk.html  search.js
docs/apidocs/: autohive_integrations_sdk.html  search.js
docs/apidocs/autohive_integrations_sdk/: integration.html
docs/autohive_integrations_sdk/: integration.html
docs/manual/: billing.md  building_your_first_integration.md  connected_account.md  integration_structure.md  patterns.md
docs/plans/: 12.md
samples/action-error-demo/: .gitignore  action_error_demo.py  config.json  requirements.txt
samples/api-fetch/: README.md  api_fetch.py  config.json  requirements.txt
samples/api-fetch/tests/: context.py  test_api_fetch.py
samples/template/: README.md  config.json  my_integration.py
samples/template/tests/: context.py  test_my_integration.py
skills/: README.md
skills/building-integration/: SKILL.md
skills/migrating-private-integration/: SKILL.md
skills/reviewing-integration-prs/: SKILL.md
skills/upgrading-sdk-v2/: SKILL.md
skills/writing-integration-tests/: SKILL.md
skills/writing-unit-tests/: SKILL.md
src/autohive_integrations_sdk/: __init__.py  integration.py
tests/: conftest.py  test_action_error.py  test_execution_context.py  test_integration.py  test_results.py
