[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autohive_integrations_sdk"
version = "2.0.0"
authors = [
  { name="Reilly Oldham", email="reilly@autohive.com" },
  { name="Kai Koenig", email="kai@autohive.com" },
  { name="Ninos Awas", email="ninos@raygun.com" }
]
description = "Integrations SDK for Autohive"
readme = "README_PYPI.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "aiohttp", 
    "jsonschema==4.17.3"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/Autohive-AI/integrations-sdk"
Issues = "https://github.com/Autohive-AI/integrations-sdk/issues"